--- a/application.yml
+++ b/application.yml
@@ -1,17 +1,9 @@
-spring:
-  profiles: docker
-  cloud:
-    config:
-      uri: http://${CONFIGSERVER_1_PORT_8888_TCP_ADDR:localhost}:8888
-endpoints:
-  restart: enabled
+info:
+  description: Spring Cloud Samples
+  url: https://github.com/spring-cloud-samples
 eureka:
-  instance:
-    nonSecurePort: 80
-    preferIpAddress: true
   client:
     serviceUrl:
-      defaultZone: http://${EUREKA_1_PORT_8761_TCP_ADDR:localhost}:8761/eureka/
-
-nombres.cliente:percy ivan
-edad:32
+      defaultZone: http://localhost:8761/eureka/
+      
+foo: baz
