--- a/application.yml
+++ b/application.yml
@@ -7,3 +7,9 @@ eureka:
       defaultZone: http://localhost:8761/eureka2/
       
 foo: percy ivan quispe
+---
+spring:
+  profiles: cloud
+  cloud:
+    config:
+      uri: http//peru.com
