--- a/application.yml
+++ b/application.yml
@@ -12,8 +12,8 @@ spring:
   profiles: cloud
   cloud:
     config:
-      uri: http//peru.com-
---
+      uri: http//peru.com
+---
 spring:
   profiles: cloud2
   cloud:
